--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1256,14 +1256,14 @@ body {
   #camera{
     margin-top: 100px;
     position: fixed;
-    height: 70%;
-    width: 100%;
+    /* height: 70%;
+    width: 100%; */
     object-fit: cover;
   }
  #camera--view, #camera--sensor, #camera--output{
     position: fixed;
-    height: 70%;
-    width: 100%;
+    /* height: 70%;
+    width: 100%; */
     object-fit: cover;
 }
 #camera--view, #camera--sensor, #camera--output{
@@ -1278,8 +1278,8 @@ body {
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
 }
 .taken{
-    height: 70%!important;
-    width: 100% !important;
+    /* height: 70%!important;
+    width: 100% !important; */
     transition: all 0.5s ease-in;
     z-index: 2;
 }
