Making Code Deployment Ready

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
     }
 
     function myfunc(){
-        console.log("Inside myfuck")
+        console.log("Inside myfunc")
         const selectedFile = document.getElementById("image-upload").files[0];
         var reader = new FileReader();
         reader.readAsDataURL(selectedFile);
