--- a/templates/base.html
+++ b/templates/base.html
@@ -33,14 +33,30 @@
 
 <body>
 
-  <div class="modal fade" id="productStatusModal" tabindex="-1" role="dialog" aria-labelledby="productStatusModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="productSafe" tabindex="-1" role="dialog" aria-labelledby="productSafeModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header" style="justify-content: center;">
-          <h5 class="modal-title" id="productStatusModalLongTitle">Pop up</h5>
+          <h5 class="modal-title" id="productSafeModalLongTitle">Pop up</h5>
         </div>
         <div class="modal-body" style="display: flex; justify-content: center;">
           <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_bx4oomul.json"  background="transparent"  speed="1.25" loop autoplay class="lottie"></lottie-player>
+        </div>
+        <div class="modal-footer">
+          <button type="button" data-bs-dismiss="modal" class="okay-class">Okay</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="productNotSafe" tabindex="-1" role="dialog" aria-labelledby="productNotSafeModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header" style="justify-content: center;">
+          <h5 class="modal-title" id="productNotSafeModalLongTitle">Pop up</h5>
+        </div>
+        <div class="modal-body" style="display: flex; justify-content: center;">
+          <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_sfktyrws.json"  background="transparent"  speed="1" loop autoplay class="lottie"></lottie-player>
         </div>
         <div class="modal-footer">
           <button type="button" data-bs-dismiss="modal" class="okay-class">Okay</button>
@@ -65,6 +81,7 @@
     </div>
   </div>
 
+  
   <div class="modal fade" id="Error404" tabindex="-1" role="dialog" aria-labelledby="productStatusModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
