--- a/templates/login.html
+++ b/templates/login.html
@@ -73,7 +73,7 @@
 								<label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
 								<input type="password" name="password" id="password" placeholder="Password" />
 							</div> -->
-							<div class="form-group form-button">
+							<div class="form-group form-button" style="text-align: center;">
 								<input type="submit" name="signin" id="signin" class="form-submit" value="Log in" />
 							</div>
 						</form>
