--- a/templates/register.html
+++ b/templates/register.html
@@ -77,7 +77,7 @@
                         <!-- <div class="form-group">
                             <input type="password" name="confirm-password" id="confirm-password" placeholder="Repeat your password" required/>
                         </div> -->
-                        <div class="form-group form-button">
+                        <div class="form-group form-button" style="text-align: center;">
                             <input type="submit" name="signup" id="signup" class="form-submit" value="Register" />
                         </div>
                     </form>
