Logout Functionality Bug Fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -122,7 +122,7 @@
         </div>
         <div class="modal-footer" style="justify-content: space-around !important;">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="background-color: #3860b5 !important; color: white;">Cancel</button>
-          <button type="button" class="btn btn-danger"><a href="{{ url_for('index') }}" style="color: white;"> Yes, Continue </a></button>
+          <button type="button" class="btn btn-danger"><a href="{{ url_for('logout') }}" style="color: white;"> Yes, Continue </a></button>
         </div>
       </div>
     </div>
