Addition of wheat in gluten

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,7 +32,7 @@
 
         var allergenDict = 
         {
-            "Gluten": ["Rice", " Quinoa", " Oats", " Corn", " Potatoes", " Fruits", " Vegetables", " Nuts", " Seeds, ",],
+            "Gluten": ["Wheat"," Rice", " Quinoa", " Oats", " Corn", " Potatoes", " Fruits", " Vegetables", " Nuts", " Seeds, ",],
             "Dairy": ["Almond", " Soy", " Coconut", " Oat Milk", " Cheese", " Yogurt", " Ice Cream", " Butter", " Cream", " Dried milk", " Milk Solids", " Powdered Milk", " Whey", " Butter Milk, "],
             "Nut": ["Walnut"," Pumpkin Seeds", " Sunflower Seeds", " Sesame Seeds"," Peanut"," Snack mixes", " Dried Fruits", " Raisins", " Date", " Prunes", " Figs", " Apricots", " Peaches, "],
             "Soy": ["Almond Milk", " Coconut Milk", " Oat Milk, "],
