Bug fixes 3rd Edition

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -33,7 +33,7 @@
         var allergenDict = 
         {
             "Gluten": ["Wheat"," Rice", " Quinoa", " Oats", " Corn", " Potatoes", " Fruits", " Vegetables", " Nuts", " Seeds, ",],
-            "Dairy": ["Almond", " Soy", " Coconut", " Oat Milk", " Cheese", " Yogurt", " Ice Cream", " Butter", " Cream", " Dried milk", " Milk Solids", " Powdered Milk", " Whey", " Butter Milk, "],
+            "Dairy": ["Almond", " Milk", " Coconut", " Oat Milk", " Cheese", " Yogurt", " Ice Cream", " Butter", " Cream", " Dried milk", " Milk Solids", " Powdered Milk", " Whey", " Butter Milk, "],
             "Nut": ["Walnut"," Pumpkin Seeds", " Sunflower Seeds", " Sesame Seeds"," Peanut"," Snack mixes", " Dried Fruits", " Raisins", " Date", " Prunes", " Figs", " Apricots", " Peaches, "],
             "Soy": ["Almond Milk", " Coconut Milk", " Oat Milk, "],
             "Meat Based": ["Egg", " Fish", " Red Meat", " Chicken"," Prawns"," Crab"," Pork", " Mutton, "],
@@ -163,13 +163,9 @@
                                     <td>Citrus</td>
                                     <td>Orange, Lemon, Kiwi</td>
                                   </tr>
-                                  <tr>
+                                  <tr style="border-bottom: hidden;">
                                     <td>Legumes</td>
                                     <td>Lentils, Peas, Broad Beans</td>
-                                  </tr>
-                                  <tr style="border-bottom: hidden;">
-                                    <td>Cruciferous</td>
-                                    <td>Broccoli, Spinach, Celery</td>
                                   </tr>
                                 </tbody>
                               </table>
