--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
 <!-- Camera -->
 <main id="camera">
     <!-- Camera sensor -->
-    <canvas id="camera--sensor" onload="adjustCanvas()" onresize="adjustCanvas1()"></canvas>
+    <canvas id="camera--sensor" onload="adjustCanvas()" onresize="adjustCanvas()"></canvas>
     <!-- Camera view -->
     <video id="camera--view" autoplay playsinline onload="adjustCanvas()" onresize="adjustCanvas()"></video>
     <!-- Camera output -->
