--- a/templates/profile.html
+++ b/templates/profile.html
@@ -285,8 +285,8 @@
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" name="allergens" value="Citrus" id="checkbox8">
-                                                <label class="form-check-label" for="checkbox8">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Legumes" id="checkbox9">
+                                                <label class="form-check-label" for="checkbox9">
                                                     Legumes
                                                 </label>
                                             </div>
